--- a/styles/styles.css
+++ b/styles/styles.css
@@ -252,6 +252,7 @@ section.section-4 {
 
 .answer_label {
   width: 100%;
+  height: auto;
   background-color: #FFFFFF;
   opacity: 0.8;
   padding: 1.7rem;
@@ -261,7 +262,8 @@ section.section-4 {
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.7019607843);
 }
 
-.answer_body {
+p.answer_body {
+  max-height: none;
   margin-top: 1rem;
 }
 
